# burrows-wheeler

./: CHANGELOG.md  LICENSE  README.md  burrows-wheeler.cabal  package.yaml  stack.yaml
app/: Main.hs
cbwt/: decode.c  decode.h  encode.c  encode.h
openbwt/: CMakeLists.txt  Changelog.txt  License.txt  Readme.txt  openbwt.c  openbwt.h
openbwt/samples/: Makefile  bwt.c  unbwt.c
src/Codec/Compression/: BWT.hs  Decode.hsc  Encode.hsc
src/Codec/Compression/BWT/: Error.hs
