cmake_minimum_required(VERSION 2.4.0)
project(OpenBWT C)
option(BUILD_SHARED_LIBS "Set to OFF to build static libraries" ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
  set(CMAKE_VERBOSE_MAKEFILE ON)
endif(NOT CMAKE_BUILD_TYPE)
add_library(openbwt openbwt.c)
